--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -212,6 +212,16 @@ pre {
   }
 }
 
+.wrapper-header {
+  padding-right: $spacing-unit;
+  padding-left: $spacing-unit;
+  @extend %clearfix;
+
+  @include media-query($on-laptop) {
+      padding-right: $spacing-unit / 2;
+      padding-left: $spacing-unit / 2;
+  }
+}
 
 
 /**
